<resources>
    <string name="app_name">KawowyDzienniczek</string>
    
    <!-- Strings related to login -->
    <string name="prompt_username">Użytkownik</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj!</string>
    <string name="action_sign_in_short">Zaloguj!</string>
    <string name="action_logout">Wyloguj</string>
    <string name="error_invalid_email">Nieprawidłowy adres e-mail!</string>
    <string name="error_invalid_password">Min. ilość znaków: 5</string>
    <string name="error_incorrect_password">Nieprawidłowe hasło!</string>
    <string name="error_field_required">To pole jest wymagane!</string>
    <string name="permission_rationale">"Dostęp do kontaktów jest konieczny do procesu potwierdzenia rejestracji."
    </string>
   <string name="hello_user">Zalogowano jako: </string>
    <string name="action_register">Nie masz konta? Kliknij <a href="">tutaj</a>, by utworzyć nowe!</string>
    <string name="coffee_shops_list">Pobierz listę kawiarni w zasięgu</string>
    <string name="title_activity_coffee_shop">CoffeeShopActivity</string>
   <string name="desc_image">Image</string>
    <string name="action_settings">Settings</string>
    <string name="btn_offer">Oferty</string>
    <string name="btn_promotions">Promocje</string>
    <string name="title_offersactivity_list">Items</string>
    <string name="title_offersactivity_detail">OffersActivity Detail</string>
    <string name="title_promotion_list">Promotions</string>
    <string name="title_promotion_detail">Promotion Detail</string>
    <string name="curr_coffee_shop">Aktualna kawiarnia</string>
    <string name="my_coffee_shops">Moje kawiarnie</string>
    <string name="preview_coffee_shops">Przeglądaj kawiarnie</string>
    <string name="settings">Ustawienia</string>
    <string name="promotions_available">Dostępne</string>
    <string name="promotions_active">Aktywne</string>
    <string name="promotions_history">Historia</string>
    <string name="loading">Loading\u2026</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
