<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.kawowydzienniczek.kawowydzienniczek.MainPageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_page">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextClock
                    android:id="@+id/clock"
                    android:layout_toStartOf="@+id/btn_LogOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:textColor="@android:color/holo_green_dark"
                    />

                <Button
                    android:id="@+id/btn_LogOut"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:text="@string/action_logout"
                    android:layout_centerVertical="true"
                    android:onClick="LogOut"
                    android:textColor="@android:color/white"
                    android:background="@android:color/holo_blue_dark"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hello_user"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_get_cofees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffee_shops_list"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_dark"
                android:onClick="getCofeeShops"/>
        </LinearLayout>
    </ScrollView>

    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/lw_cofee_shops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/lw_cofee_shop_divider"
        android:dividerHeight="1dp"
        />
</LinearLayout>
